Corrections in CSS dicovered during asset:precompile Also some changes in production env

--- a/app/assets/stylesheets/lightbox.css
+++ b/app/assets/stylesheets/lightbox.css
@@ -114,7 +114,7 @@
 /* line 81, ../sass/lightbox.sass */
 .lb-prev:hover {
   /* background: url(../images/prev.png) left 48% no-repeat; */
-  background: url(/assets/prev.png) left 48% no-repeat; */
+  background: url(/assets/prev.png) left 48% no-repeat;
 }
 
 /* line 85, ../sass/lightbox.sass */
